# machine

./: .gitignore  CMakeLists.txt  README.md  README.txt
exp/: machine.py
exp/results/benchmark/arc/4/2/: benchmark.csv
exp/results/benchmark/fifo/1/1/: benchmark.csv
exp/results/benchmark/fifo/1/2/: benchmark.csv
exp/results/benchmark/fifo/1/3/: benchmark.csv
exp/results/benchmark/fifo/1/4/: benchmark.csv
exp/results/benchmark/fifo/1/5/: benchmark.csv
exp/results/benchmark/fifo/2/1/: benchmark.csv
exp/results/benchmark/fifo/2/2/: benchmark.csv
exp/results/benchmark/fifo/2/3/: benchmark.csv
exp/results/benchmark/fifo/2/4/: benchmark.csv
exp/results/benchmark/fifo/2/5/: benchmark.csv
exp/results/benchmark/fifo/3/1/: benchmark.csv
exp/results/benchmark/fifo/3/2/: benchmark.csv
exp/results/benchmark/fifo/3/3/: benchmark.csv
exp/results/benchmark/fifo/3/4/: benchmark.csv
exp/results/benchmark/fifo/3/5/: benchmark.csv
exp/results/benchmark/fifo/4/2/: benchmark.csv
exp/results/benchmark/fifo/4/3/: benchmark.csv
exp/results/benchmark/fifo/4/5/: benchmark.csv
exp/results/benchmark/lfu/1/1/: benchmark.csv
exp/results/benchmark/lfu/1/2/: benchmark.csv
exp/results/benchmark/lfu/1/3/: benchmark.csv
exp/results/benchmark/lfu/1/4/: benchmark.csv
exp/results/benchmark/lfu/1/5/: benchmark.csv
exp/results/benchmark/lfu/2/1/: benchmark.csv
exp/results/benchmark/lfu/2/2/: benchmark.csv
exp/results/benchmark/lfu/2/3/: benchmark.csv
exp/results/benchmark/lfu/2/4/: benchmark.csv
exp/results/benchmark/lfu/2/5/: benchmark.csv
exp/results/benchmark/lfu/3/1/: benchmark.csv
exp/results/benchmark/lfu/3/2/: benchmark.csv
exp/results/benchmark/lfu/3/3/: benchmark.csv
exp/results/benchmark/lfu/3/4/: benchmark.csv
exp/results/benchmark/lfu/3/5/: benchmark.csv
exp/results/benchmark/lfu/4/4/: benchmark.csv
exp/results/benchmark/lru/1/1/: benchmark.csv
exp/results/benchmark/lru/1/2/: benchmark.csv
exp/results/benchmark/lru/1/3/: benchmark.csv
exp/results/benchmark/lru/1/4/: benchmark.csv
exp/results/benchmark/lru/1/5/: benchmark.csv
exp/results/benchmark/lru/2/1/: benchmark.csv
exp/results/benchmark/lru/2/2/: benchmark.csv
exp/results/benchmark/lru/2/3/: benchmark.csv
exp/results/benchmark/lru/2/4/: benchmark.csv
exp/results/benchmark/lru/2/5/: benchmark.csv
exp/results/benchmark/lru/3/1/: benchmark.csv
exp/results/benchmark/lru/3/2/: benchmark.csv
exp/results/benchmark/lru/3/3/: benchmark.csv
exp/results/benchmark/lru/3/4/: benchmark.csv
exp/results/benchmark/lru/3/5/: benchmark.csv
exp/results/benchmark/lru/4/1/: benchmark.csv
exp/results/latency/tpcc/lru/4/dram-nvm/: latency.csv
exp/results/latency/tpcc/lru/4/dram-nvm-ssd/: latency.csv
exp/results/latency/tpcc/lru/4/nvm/: latency.csv
exp/results/size/tpcc/lru/1/dram-nvm/: size.csv
exp/results/size/tpcc/lru/1/dram-nvm-ssd/: size.csv
exp/results/size/tpcc/lru/1/dram-ssd/: size.csv
fio/: profile.fio
oltpbench/: machine_ch_config.xml  machine_tatp_config.xml  machine_tpcc_config.xml  machine_voter_config.xml  machine_ycsb_config.xml
src/: CMakeLists.txt  cache.cpp  configuration.cpp  device.cpp  foo.cpp  stats.cpp  storage_cache.cpp  types.cpp  workload.cpp
src/include/: arc_policy.h  cache.h  cache_policy.h  configuration.h  device.h  distribution.h  fifo_policy.h  foo.h  lfu_policy.h  lru_policy.h  macros.h  policy.h  policy_arc.h  policy_fifo.h  policy_lfu.h  policy_lru.h  stats.h  storage_cache.h  types.h  workload.h
test/: CMakeLists.txt  arc_test.cpp  distribution_test.cpp  fifo_test.cpp  lfu_test.cpp  lru_test.cpp  machine.cpp  policy_arc_test.cpp  policy_fifo_test.cpp  policy_lfu_test.cpp  policy_lru_test.cpp  test_foo.cpp
